# win10_idd_xfz1986_usb_graphic_driver_display

./: README.md
arduino/: udisp_xfz1986_v1.0_readme_for_arduino.txt
arduino/esp_new_jpeg/: library.properties
arduino/esp_new_jpeg/examples/DecodeTest/: DecodeTest.ino
arduino/esp_new_jpeg/src/: CMakeLists.txt  ESP_NEW_JPEG_Library.h
arduino/esp_new_jpeg/src/include/: esp_jpeg_common.h  esp_jpeg_version.h
arduino/udisp_xfz1986/: library.properties
arduino/udisp_xfz1986/examples/esp32sx_udisp_st7789/: esp32sx_udisp_st7789.ino
arduino/udisp_xfz1986/src/: udisp1986.cpp  udisp1986.h
device_porting/esp-idf-esp32s2_usbdisp_firmware/esp32s2_usbdisp_firmware/: CMakeLists.txt
device_porting/esp-idf-esp32s2_usbdisp_firmware/esp32s2_usbdisp_firmware/main/: CMakeLists.txt  logo.c  main.c
device_porting/esp-idf5.3_udisp_s3_st7789_example/: README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s2  sdkconfig.old
device_porting/esp-idf5.3_udisp_s3_st7789_example/components/espressif__esp_new_jpeg/: .component_hash  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  idf_component.yml
device_porting/esp-idf5.3_udisp_s3_st7789_example/components/espressif__esp_new_jpeg/include/: esp_jpeg_dec.h  esp_jpeg_enc.h
device_porting/esp-idf5.3_udisp_s3_st7789_example/components/espressif__esp_new_jpeg/test_app/: CMakeLists.txt  pytest_esp_new_jpeg.py  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
device_porting/esp-idf5.3_udisp_s3_st7789_example/components/espressif__esp_new_jpeg/test_app/main/: CMakeLists.txt  image_io.c  image_io.h  test_app_main.c  test_case.c  test_decoder.c  test_decoder.h  test_encoder.c  test_encoder.h
device_porting/esp-idf5.3_udisp_s3_st7789_example/components/leeebo__tinyusb_src/: .component_hash  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
device_porting/esp-idf5.3_udisp_s3_st7789_example/components/leeebo__tinyusb_src/src/: tusb_option.h
device_porting/esp-idf5.3_udisp_s3_st7789_example/components/leeebo__tinyusb_src/src/class/audio/: audio_device.c  audio_device.h
device_porting/esp-idf5.3_udisp_s3_st7789_example/components/leeebo__tinyusb_src/src/class/video/: video.h  video_device.c
device_porting/esp-idf5.3_udisp_s3_st7789_example/components/leeebo__tinyusb_src/src/common/: tusb_mcu.h
device_porting/esp-idf5.3_udisp_s3_st7789_example/components/leeebo__tinyusb_src/src/portable/espressif/esp32sx/: dcd_esp32sx.c
device_porting/esp-idf5.3_udisp_s3_st7789_example/components/leeebo__tinyusb_src/src/portable/synopsys/dwc2/: dcd_dwc2.c  dwc2_esp32.h
device_porting/esp-idf5.3_udisp_s3_st7789_example/main/: .CMakeLists.txt.swp  CMakeLists.txt  Kconfig.projbuild  app_hid.c  app_lcd_s3.c  app_touch.c  app_usb.c  app_vendor.c  decode_jpeg.c  decode_jpeg.h  idf_component.yml  log.h  sx2.h  tjpgd.c  tjpgd.h  tjpgdcnf.h  usb_extend_screen.c  usb_frame.c
device_porting/esp-idf5.3_udisp_s3_st7789_example/main/include/: app_lcd.h  app_usb.h  bsp.h  display.h
device_porting/esp-idf5.3_udisp_s3_st7789_example/main/usb_device/: tusb_config.h  usb_descriptors.c  usb_descriptors.h
linux_xfz1986_usb_graphic_driver/: Makefile
linux_xfz1986_usb_graphic_driver/src/: enc_base.c  enc_jpg.c  enc_raw_rgb.c  fbhandlers.c  main.c  test_pattern.c  tiny_jpeg.c  usb_transfer.c
linux_xfz1986_usb_graphic_driver/src/inc/: base_type.h  enc_base.h  enc_jpg.h  enc_raw_rgb.h  fbhandlers.h  log.h  tiny_jpeg.h  udisp_config.h  usb_transfer.h
linux_xfz1986_usb_graphic_driver/xserver_conf/: 10-xfz1986udisp-ubuntu.conf
src/esp-idf-esp32s2_usbdisp_firmware/components/tinyusb/additions/include/: tusb_config.h
src/esp-idf-esp32s2_usbdisp_firmware/components/tinyusb/additions/include_private/: descriptors_control.h
src/esp-idf-esp32s2_usbdisp_firmware/components/tinyusb/additions/src/: descriptors_control.c
src/esp-idf-esp32s2_usbdisp_firmware/esp32s2_usbdisp_firmware/main/: Kconfig.projbuild  decode_jpeg.c  decode_jpeg.h  ili9340.c  ili9340.h  log.h  logo.c
src/win10_idd_xfz1986_usb_graphic_driver/idd_xfz1986_usb_graphic/: Driver.cpp  Driver.h  Resource.aps  enc_raw_rgb.h  idd_xfz1986_usb_graphic.vcxproj  idd_xfz1986_usb_graphic.vcxproj.filters  test_pattern.cpp  tiny_jpeg.c  tiny_jpeg.h  usb_transf.h  xfz1986_usb_graphic.inf
win10_idd_xfz1986_usb_graphic_driver/: idd_xfz1986_usb_graphic.sln
win10_idd_xfz1986_usb_graphic_driver/exe/: ioctl.h  testapp.c  testapp.rc  tiny_jpeg.c  tiny_jpeg.h  udisptool.sln  udisptool.vcxproj  udisptool.vcxproj.Filters
win10_idd_xfz1986_usb_graphic_driver/idd_xfz1986_usb_graphic/: Driver.cpp  Driver.h  Resource.rc  Trace.h  base_type.h  enc_base.cpp  enc_base.h  enc_jpg.cpp  enc_jpg.h  enc_raw_rgb.cpp  enc_raw_rgb.h  idd_xfz1986_usb_graphic.vcxproj  idd_xfz1986_usb_graphic.vcxproj.filters  ioctl.h  log.h  misc_helper.c  tiny_jpeg.c  usb_transf.cpp  xfz1986_usb_graphic.inf
win10_idd_xfz1986_usb_graphic_driver/idd_xfz1986_usb_graphic/include/: jconfig.h
win10_idd_xfz1986_usb_graphic_driver/idd_xfz1986_usb_graphic/lib/: jpeg-static.lib
